--- a/src/App.scss
+++ b/src/App.scss
@@ -2,8 +2,7 @@
 	font-family: "Montserrat";
 	min-height: 100%;
 	width: 100%;
-	background: linear-gradient(45deg, rgba(119, 102, 214, 0.411), rgb(65, 53, 65));
-	padding: 1px 0px 0px 0px;
+	background: linear-gradient(135deg, rgb(49, 49, 49), rgb(0, 0, 0));
 	overflow: hidden;
 	position: relative;
 }
