--- a/src/components/Head/Head.scss
+++ b/src/components/Head/Head.scss
@@ -18,7 +18,7 @@
 			z-index: 10;
 			display: block;
 			font-size: 1.875rem;
-			color: rgb(185, 182, 182);
+			color: rgba(185, 182, 182, 0.637);
 			font-family: "Roboto Slab";
 			font-weight: 500;
 		}
