--- a/src/components/Todo/Todo.scss
+++ b/src/components/Todo/Todo.scss
@@ -51,18 +51,18 @@
 	&__list {
 		.todo__element {
 			padding: 4px;
-			transition: all 1s ease 0s;
 			align-items: center;
 			justify-content: flex-end;
 			border-radius: 10px;
 			box-shadow:
 				-1px -1px 5px rgba(221, 215, 215, 0.192),
-				5px 5px 10px rgba(0, 0, 0, 0.4);
-			transition: all 0.5s ease 0s;
-			gap: 15px;
+				5px 5px 10px rgba(0, 0, 0, 0.4),
+				inset 0px -3px 5px rgba(255, 253, 253, 0),
+				inset 2px 2px 5px rgba(0, 0, 0, 0);
+			transition: all 0.3s ease 0s;
+
 			display: flex;
 			user-select: none;
-
 			margin: 0px 0px 15px 0px;
 			&:last-child {
 				margin: 0px 0px 0px 0px;
@@ -70,17 +70,19 @@
 			&.edit {
 				background-color: #292828;
 				box-shadow:
-					0px 0px 0px rgba(221, 215, 215, 0),
-					0px 0px 0px rgba(0, 0, 0, 0);
+					10px 10px 10px rgba(255, 0, 0, 0),
+					5px 5px 10px rgba(0, 0, 0, 0.4),
+					inset -2px -2px 2px rgba(255, 253, 253, 0.226),
+					inset 2px 2px 5px rgba(0, 0, 0, 0.226);
 			}
 		}
 	}
 
 	&__edit {
+		transition: all 1s ease 0s;
 		padding: 10px;
 		background-color: transparent;
 		height: 100%;
-		border-bottom: 1px solid rgb(143, 204, 159);
 		width: 100%;
 		font-size: 1.5rem;
 		color: rgb(255, 255, 255);
