--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -2,14 +2,14 @@
 	z-index: 101;
 	position: absolute;
 	height: 100%;
-
 	max-width: 300px;
 	width: 50%;
 	background: linear-gradient(45deg, #404041, rgb(27, 26, 26));
-	box-shadow: 5px 10px 10px rgb(211, 208, 208);
+	box-shadow: 5px 10px 10px rgb(51, 50, 50);
 	right: 0;
-	top: 50%;
-	transform: translateY(-50%);
+	top: 0;
+	transition: all 1s ease 0s;
+
 	&__body {
 		margin: 0 auto;
 	}
@@ -20,7 +20,6 @@
 	}
 
 	&__link {
-		border: 1px solid #000;
 		color: White;
 		font-size: 1.875rem;
 	}
