--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,14 +1,56 @@
 .sidebar {
+	overflow: auto;
+	border-radius: 5px 0px 0px 5px;
+	padding: 10px;
 	z-index: 101;
-	position: absolute;
-	height: 100%;
+	position: fixed;
+	height: 100vh;
 	max-width: 300px;
 	width: 50%;
 	background: linear-gradient(45deg, #404041, rgb(27, 26, 26));
 	box-shadow: 5px 10px 10px rgb(51, 50, 50);
 	right: 0;
 	top: 0;
-	transition: all 1s ease 0s;
+	transition: all 1s ease 0.1s;
+	visibility: hidden;
+	transform: translateX(100%);
+	&.active {
+		visibility: visible;
+		transform: translateX(0);
+		.cross {
+			&::before {
+				transform: translate(-50%, 0) rotate(45deg);
+			}
+			&::after {
+				transform: translate(-50%, 0) rotate(135deg);
+			}
+		}
+	}
+	&__head {
+		position: relative;
+		height: 25px;
+		margin: 0px 0px 15px 0px;
+		.cross {
+			cursor: pointer;
+			position: relative;
+			width: 20px;
+			height: 20px;
+			position: absolute;
+			top: 0px;
+			right: 0px;
+			&::after,
+			&::before {
+				content: "";
+				transition: all 0.1s ease 0s;
+				position: absolute;
+				top: 50%;
+				right: 0;
+				width: 100%;
+				height: 2px;
+				background-color: white;
+			}
+		}
+	}
 
 	&__body {
 		margin: 0 auto;
@@ -17,6 +59,20 @@
 	&__list {
 		display: flex;
 		justify-content: center;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		gap: 15px;
+		li {
+			padding: 10px;
+
+			width: 100%;
+			text-align: center;
+			border-radius: 20px;
+			&:hover {
+				background-color: #4040419f;
+			}
+		}
 	}
 
 	&__link {
