--- a/src/components/Head/Head.scss
+++ b/src/components/Head/Head.scss
@@ -1,15 +1,15 @@
 .header {
+	transition: all 1s ease 0s;
 	width: 100%;
 	position: fixed;
 	z-index: 100;
 	background-color: #02020267;
 	box-shadow: 0 5px 10px #000;
-	// background: linear-gradient(45deg, rgb(38, 11, 134), rgb(18, 27, 155));
 	padding: 15px 15px;
 	&__navigation {
 		position: relative;
 		display: flex;
-		justify-content: space-between;
+		justify-content: flex-end;
 		align-items: center;
 		gap: 15px;
 	}
@@ -31,6 +31,8 @@
 		color: rgba(255, 255, 255, 0.521);
 	}
 	&__projects {
+		flex: 1 1 auto;
+		text-align: right;
 		position: relative;
 	}
 	&__list {
@@ -48,6 +50,41 @@
 			color: rgb(144, 56, 245);
 			font-family: "Roboto Slab";
 			font-weight: 500;
+		}
+	}
+	.darkmode {
+		&__button {
+			width: 42px;
+			position: relative;
+			height: 24px;
+			border-radius: 20px;
+			background-color: black;
+			transition: all 0.5s ease 0s;
+		}
+
+		&__indicator {
+			transition: all 0.5s ease 0s;
+			top: 50%;
+			left: 1px;
+			transform: translate(0%, -50%);
+			position: absolute;
+			background-color: white;
+			height: 20px;
+			width: 20px;
+			border-radius: 50%;
+		}
+	}
+	&.isDark {
+		box-shadow: 0 5px 10px #7e7c7c;
+		.darkmode {
+			&__button {
+				background-color: white;
+			}
+			&__indicator {
+				background-color: black;
+				left: 21px;
+				transform: translate(0%, -50%);
+			}
 		}
 	}
 }
