--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -64,18 +64,19 @@
 		justify-content: center;
 		gap: 15px;
 		li {
-			padding: 10px;
-
 			width: 100%;
-			text-align: center;
-			border-radius: 20px;
-			&:hover {
-				background-color: #4040419f;
-			}
 		}
 	}
 
 	&__link {
+		padding: 10px;
+		display: block;
+		width: 100%;
+		text-align: center;
+		border-radius: 20px;
+		&:hover {
+			background-color: #4040419f;
+		}
 		color: White;
 		font-size: 1.875rem;
 	}
