--- a/src/App.scss
+++ b/src/App.scss
@@ -34,3 +34,23 @@
 	max-width: 1300px;
 	margin: 0 auto;
 }
+.cross {
+	cursor: pointer;
+	position: relative;
+	width: 20px;
+	height: 20px;
+	position: absolute;
+	top: 0px;
+	right: 0px;
+	&::after,
+	&::before {
+		content: "";
+		transition: all 0.1s ease 0s;
+		position: absolute;
+		top: 50%;
+		right: 0;
+		width: 100%;
+		height: 2px;
+		background-color: white;
+	}
+}
