--- a/src/pages/Todo/Todo.scss
+++ b/src/pages/Todo/Todo.scss
@@ -2,11 +2,29 @@
 	margin: 100px 0px 0px 0px;
 	padding: 10px 10px;
 	position: relative;
+	&__head {
+		position: relative;
+		.cross {
+			&::before {
+				transform: translate(-50%, 0) rotate(45deg);
+			}
+			&::after {
+				transform: translate(-50%, 0) rotate(135deg);
+			}
+		}
+	}
 	&__title {
 		text-align: center;
 		color: white;
-		font-size: 26px;
+		font-size: 2rem;
 		margin: 0px 0px 40px 0px;
+		display: flex;
+		gap: 20px;
+		justify-content: center;
+		align-items: center;
+		span {
+			word-break: break-all;
+		}
 	}
 
 	&__container {
@@ -40,14 +58,16 @@
 		width: 100%;
 		background-color: #2c2b2b;
 		transition: all 0.5s ease 0s;
-		padding: 30px;
+		padding: 10px;
 		border-radius: 5px;
 		box-shadow: 10px 10px 15px #000000;
 		&.isDark {
 			background-color: #464444;
 		}
 	}
-
+	&__body {
+		padding: 30px;
+	}
 	&__form {
 		margin: 0px 0px 30px 0px;
 		display: flex;
