--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -19,10 +19,10 @@
 		transform: translateX(0);
 		.cross {
 			&::before {
-				transform: translate(-50%, 0) rotate(45deg);
+				transform: translate(0%, -50%) rotate(45deg);
 			}
 			&::after {
-				transform: translate(-50%, 0) rotate(135deg);
+				transform: translate(0%, -50%) rotate(135deg);
 			}
 		}
 	}
