--- a/src/pages/Todo/Todo.scss
+++ b/src/pages/Todo/Todo.scss
@@ -27,12 +27,15 @@
 	&__row {
 		display: flex;
 		flex-direction: column;
+		max-width: 400px;
+		margin: 0 auto;
 		gap: 20px;
+		position: relative;
 	}
 	&__item {
 		position: relative;
 		max-width: 550px;
-		margin: 0 auto;
+
 		width: 100%;
 		background-color: #2c2b2b;
 
