--- a/src/pages/Todo/Todo.scss
+++ b/src/pages/Todo/Todo.scss
@@ -3,6 +3,7 @@
 	padding: 10px 10px;
 	position: relative;
 	min-height: 100vh;
+	border: 1px solid #000;
 	&__container {
 		max-width: none;
 	}
@@ -16,6 +17,7 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: flex-start;
+		z-index: 1000;
 	}
 	&__control-button {
 		padding: 10px 5px;
