--- a/src/pages/Todo/Todo.scss
+++ b/src/pages/Todo/Todo.scss
@@ -1,8 +1,6 @@
 .todo {
 	margin: 100px 0px 0px 0px;
 	padding: 10px 10px;
-	position: relative;
-	min-height: 100vh;
 
 	&__container {
 		max-width: none;
@@ -28,15 +26,13 @@
 	}
 	&__row {
 		display: flex;
-		flex-direction: column;
-		max-width: 400px;
+		align-items: center;
+		flex-wrap: wrap;
 		margin: 0 auto;
 		gap: 20px;
-		position: relative;
 	}
 	&__item {
 		position: relative;
-
 		width: 100%;
 		background-color: #2c2b2b;
 		max-width: 400px;
